@@ -1,3 +1,5 @@
+8/12/11 display element numbers in periodic table placeholder
+8/12/11 Jmol: script to return element numbers, for use in periodic table
 8/12/11 wire up "electron density" control in "Two Atoms" tab
 8/12/11 Jmol: use different isosurfaces for homogeneous diatomic molecules
 8/12/11 Jmol: wrote script to identify homogeneous diatomic molecules
